# hyperliquid-rust-sdk

./: Cargo.toml
src/: errors.rs  helpers.rs  lib.rs  req.rs
src/exchange/: exchange_client.rs
src/info/: info_client.rs
src/signature/: create_signature.rs
src/ws/: ws_manager.rs
