[package]
name = "hyperliquid_rust_sdk"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for Hyperliquid"
homepage = "https://hyperliquid.xyz/"
readme = "README.md"
documentation = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"
repository = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"

[dependencies]
chrono = "0.4.38"
env_logger = { version = "0.11.3", default-features = false }
ethers = { version = "2.0.14", features = ["eip712", "abigen"] }
futures-util = "0.3.30"
hex = "0.4.3"
http = "1.1.0"
lazy_static = "1.4.0"
log = "0.4.21"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
rmp-serde = "1.3.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
uuid = { version = "1.8.0", features = ["v4"] }
